Added support for FlagAttribute for enums defined with BinarySequence
