# sample/Demo.Api.Generated/Contracts/_EnumerationTypes/ColorType.cs
@@ -1,0 +1,22 @@
+﻿using System;
+
+//------------------------------------------------------------------------------
+// This code was auto-generated by ApiGenerator 1.0.155.0.
+//
+// Changes to this file may cause incorrect behavior and will be lost if
+// the code is regenerated.
+//------------------------------------------------------------------------------
+//
+// ReSharper disable once CheckNamespace
+namespace Demo.Api.Generated.Contracts
+{
+    [Flags]
+    public enum ColorType
+    {
+        Unknown = 0,
+        Black = 1,
+        White = 2,
+        Yellow = 4,
+        Red = 8
+    }
+}
